description mobile fix

--- a/assets/css/startup-style.css
+++ b/assets/css/startup-style.css
@@ -158,6 +158,10 @@
   #logo-symbol {
 	  width: 20%;
   }
+  #first-description-circle {
+	  margin-top: 25em;
+/* 	  padding-top: 40px; */
+  }
 /*
   .logo {
 
